$Id$

2015-10-04  Christian Franke  <franke@computer.org>

	drivedb.h:
	- JMicron JMS539 (0x152d:0x0539, 0x0100): Set from -d usbjmicron to
	  unsupported because some devices may require -d sat instead (ticket #552).

2015-09-25  Christian Franke  <franke@computer.org>

	scsiata.cpp: Ignore SAT ATA PASS-THROUGH fixed format sense data if no
	ATA status bit is set (ticket #612).

2015-09-23 Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: Innostor USB3.0 to SATAIII bridge (#611)

2015-09-21 Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h: decode 188 attribute for the "Seagate Enterprise Capacity
	3.5 HDD" drives family, (see #551).

2015-09-04 Alex Samorukov <samm@os2.kiev.ua>

	Makefile.am: integrate darwin dmg build process to the Makefile

2015-09-03 Alex Samorukov <samm@os2.kiev.ua>

	os_darwin: Initial import of the files required to build
	OSX/smartmontools native package (see #555).

2015-08-27  Alex Samorukov <samm@os2.kiev.ua>

	Homepage URL updated from the sourceforge to smartmontools.org (r4120)

2015-08-26  Alex Samorukov <samm@os2.kiev.ua>

	os_darwin.cpp: Implement get_os_version_str() for the darwin.

2015-08-17  Christian Franke  <franke@computer.org>

	scsiata.cpp: Ignore bogus SCSI sense_key if ATA status in
	SAT ATA Return Descriptor indicates success (ticket #548).

2015-08-08  Christian Franke  <franke@computer.org>

	os_win32.cpp: Fix get_os_version_str() for Windows >= 8.1.
	Add Windows 10 Final.

2015-08-02  Christian Franke  <franke@computer.org>

	configure.ac: Remove '--disable-drivedb',
	'--enable-savestates', '--enable-attributelog'.
	Print error message if used.

2015-07-15  Christian Franke  <franke@computer.org>

	autogen.sh: Drop support for automake 1.7 - 1.9.x.
	Rework search for automake-VERSION.
	configure.ac: Drop support for autoconf 2.5x.
	Drop support for automake 1.7 - 1.9.x.
	Remove --with-docdir option.

2015-06-24  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- USB: SimpleTech 3.0 bridge (0x4971:0x8017), reported in #554