@@ -3,8 +3,14 @@ $Id$
 2015-10-04  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
-	- JMicron JMS539 (0x152d:0x0539, 0x0100): Set from -d usbjmicron to
+	- USB: Genesys Logic (0x05e3:0x0735)
+	- USB: Addonics (0x0bf6:0x1001): unsupported (ticket #609)
+	- USB: Initio (0x13fd:0x3920)
+	- USB: JMicron JMS539 (0x152d:0x0539, 0x0100): Set from -d usbjmicron to
 	  unsupported because some devices may require -d sat instead (ticket #552).
+	- USB: JMicron (0x152d:0x0565) (ticket #607)
+	- USB: VIA VL711 (0x2109:0x0711): unsupported (ticket #594)
+	- USB: Hitachi Touro Mobile (0x4971:0x1024)
 
 2015-09-25  Christian Franke  <franke@computer.org>
 
